--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
                     <input type="button" value="+" onclick="display.value += '+' " class="operator">
                 </div>
                 <div>
+
+                    <input type="button" value="%" onclick="calculatePercentage()" class="operator">
                     <input type="button" value="00" onclick="display.value += '00' ">
                     <input type="button" value="0" onclick="display.value += '0' ">
                     <input type="button" value="=" onclick="display.value = eval(display.value)" class="equal operator">
