--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Calculator</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/svg" href="images/calculator-with-number-one-svgrepo-com.svg" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
