--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Calculator</title>
-    <link rel="shortcut icon" type="image/svg" href="images/calculator-with-number-one-svgrepo-com.svg" />
+    <link rel="shortcut icon" type="image/svg" href="images/calculator-svgrepo-com.svg" />
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -14,7 +14,7 @@
         <div class="calculator">
             <form>
                 <div class="display">
-                    <input type="text" name="display">
+                    <input type="text" name="display" placeholder="0">
                 </div>
                 <div>
                     <input type="button" value="AC" onclick="display.value = '' " class="operator">
