--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </form>
         </div>
     </div>
+    <!-- JavaScript link -->
     <script src="script.js"></script>
 </body>
-
 </html>
