--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Calculator</title>
     <link rel="shortcut icon" type="image/svg" href="images/calculator-svgrepo-com.svg" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
 </head>
 
 <body>
@@ -51,6 +51,6 @@
         </div>
     </div>
     <!-- JavaScript link -->
-    <script src="script.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
